feat add category + upgrade recipe + bug fixes

--- a/src/app/components/recipe/recipe-table/recipe.component.html
+++ b/src/app/components/recipe/recipe-table/recipe.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div>
+    <button class="recipe-button" (click)="goToCategoryManagement('recipe')">Create more categories</button>
+  </div>
   <div class="filter-container">
     <mat-form-field>
       <mat-label>Filter</mat-label>
