--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -33,10 +33,25 @@
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
+      <!-- Short Description Column -->
+      <ng-container matColumnDef="shortDescription">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Show Description
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      </ng-container>
+
       <!-- Description Column -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
         <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="Actions">
+        <button mat-icon-button *matCellDef="let row" color="warn" (click)="deleteCategory(row.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -44,9 +59,7 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         (click)="openOperationModal('edit', row)"
-      >
-        <!-- Row shown when there is no matching data. -->
-      </tr>
+      ></tr>
 
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">
