--- a/src/app/components/recipe/recipe-form/recipe-form/recipe-form.component.html
+++ b/src/app/components/recipe/recipe-form/recipe-form/recipe-form.component.html
@@ -1,82 +1,129 @@
 <div class="container">
   <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-    <mat-form-field appearance="fill">
-      <mat-label>Name</mat-label>
-      <input matInput formControlName="name" required />
-    </mat-form-field>
+    <div class="recipe_form__container">
+      <div class="recipe_inputs__container">
+        <mat-form-field appearance="fill">
+          <mat-label>Name</mat-label>
+          <input matInput formControlName="name" required />
+        </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>Description</mat-label>
-      <textarea matInput formControlName="description" required></textarea>
-    </mat-form-field>
+        <mat-form-field class="form-group">
+          <mat-label for="picture">Picture:</mat-label>
+          <input matFileInput formControlName="picture" id="picture" />
+        </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>Cooking Instructions</mat-label>
-      <textarea
-        matInput
-        formControlName="cookingInstructions"
-        required
-      ></textarea>
-    </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Short Description</mat-label>
+          <textarea
+            matInput
+            formControlName="shortDescription"
+            required
+          ></textarea>
+        </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>Categories</mat-label>
-      <mat-select formArrayName="categories" multiple>
-        <mat-option
-          *ngFor="let category of categories; let i = index"
-          [value]="category.id"
-          (click)="onCategorySelectionChange(category.id)"
-        >
-          {{ category.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <button mat-raised-button type="button" (click)="addIngredientField()">
-      Add Ingredient
-    </button>
-
-    <div formArrayName="selectedIngredients">
-      <ng-container
-        *ngFor="let ingredientField of selectedIngredients; let i = index"
-      >
-        <div [formGroupName]="i" class="ingredient-field">
-          <mat-form-field appearance="fill">
-            <mat-label>Ingredients</mat-label>
-            <mat-select
-              (selectionChange)="onIngredientSelected($event, i)"
-              formControlName="selectedIngredient"
-            >
-              <mat-option
-                *ngFor="let ingredient of ingredients"
-                [value]="ingredient.id"
-              >
-                {{ ingredient.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field appearance="fill">
-            <mat-label>Quantity</mat-label>
-            <input
-              matInput
-              type="number"
-              formControlName="selectedIngredientQuantity"
-              placeholder="Quantity"
-            />
-          </mat-form-field>
-
-          <button
-            mat-raised-button
-            type="button"
-            color="warn"
-            (click)="removeIngredientField(i)"
-          >
-            Remove
-          </button>
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <editor
+            apiKey="c8qwc5cv96qiwizuswzet80gvul391n2juf3v14t1vs4rcem"
+            id="description"
+            formControlName="description"
+            required
+          ></editor>
         </div>
-      </ng-container>
+
+        <div class="form-group">
+          <label for="cookingInstructions">Cooking Instructions:</label>
+          <editor
+            apiKey="c8qwc5cv96qiwizuswzet80gvul391n2juf3v14t1vs4rcem"
+            id="cookingInstructions"
+            formControlName="cookingInstructions"
+            required
+          ></editor>
+        </div>
+
+        <button mat-raised-button color="primary" type="submit">
+          Add Recipe
+        </button>
+      </div>
+      <div>
+        <mat-form-field appearance="fill">
+          <mat-label>Categories</mat-label>
+          <mat-select formArrayName="categories" multiple>
+            <mat-option
+              *ngFor="let category of categories; let i = index"
+              [value]="category.id"
+              (click)="onCategorySelectionChange(category)"
+            >
+              {{ category.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <div
+          *ngIf="selectedCategories.length > 0"
+          class="selected_category__container"
+        >
+          <div
+            *ngFor="let category of selectedCategories; let i = index"
+            class="selected_category"
+          >
+            {{ category.name }}
+            <button mat-icon-button (click)="removeCategory(i)">
+              <mat-icon>close</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="recipe_ingredients__container">
+        <button mat-raised-button type="button" (click)="addIngredientField()">
+          Add Ingredient
+        </button>
+
+        <div
+          formArrayName="selectedIngredients"
+          class="recipe_selected_ingredients__container"
+        >
+          <div
+            *ngFor="let ingredientField of selectedIngredients; let i = index"
+            [formGroupName]="i"
+            class="ingredient-field"
+          >
+            <mat-form-field appearance="fill">
+              <mat-label>Ingredients</mat-label>
+              <mat-select
+                (selectionChange)="onIngredientSelected($event, i)"
+                formControlName="selectedIngredient"
+              >
+                <mat-option
+                  *ngFor="let ingredient of ingredients"
+                  [value]="ingredient.id"
+                >
+                  {{ ingredient.name }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+              <mat-label>Quantity</mat-label>
+              <input
+                matInput
+                type="number"
+                formControlName="selectedIngredientQuantity"
+                placeholder="Quantity"
+              />
+            </mat-form-field>
+
+            <button
+              mat-raised-button
+              type="button"
+              color="warn"
+              (click)="removeIngredientField(i)"
+            >
+              Remove
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-    <button mat-raised-button color="primary" type="submit">Add Recipe</button>
   </form>
 </div>
