--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -15,7 +15,7 @@
       color="primary"
       (click)="openOperationModal('add', null)"
     >
-      Add Category
+      Add Ingredient Quantity
     </button>
   </div>
 
@@ -28,28 +28,39 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+        <td mat-cell *matCellDef="let row">{{ row.amount }}</td>
       </ng-container>
 
       <!-- Short Description Column -->
-      <ng-container matColumnDef="shortDescription">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Show Description
-        </th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      <ng-container matColumnDef="unit">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
+        <td mat-cell *matCellDef="let row">{{ row.unit }}</td>
       </ng-container>
 
       <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      <ng-container matColumnDef="expiringDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Expiring Date</th>
+        <td mat-cell *matCellDef="let row">{{ row.expiringDate }}</td>
       </ng-container>
 
-      <!-- Actions Column -->
+      <!-- Description Column -->
+      <ng-container matColumnDef="dateOfPurchase">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Date Of Purchase
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.dateOfPurchase }}</td>
+      </ng-container>
+
+      <!-- Description Column -->
       <ng-container matColumnDef="Actions">
-        <button mat-icon-button *matCellDef="let row" color="warn" (click)="deleteCategory(row.id)">
+        <button
+          mat-icon-button
+          *matCellDef="let row"
+          color="warn"
+          (click)="deleteIngredient(row.id)"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </ng-container>
