--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -27,6 +27,14 @@
         <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
 
+      <!-- Picture Column -->
+      <ng-container matColumnDef="picture">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
+        <td mat-cell *matCellDef="let row">
+          <img [src]="row.pictureURL" />
+        </td>
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -36,22 +44,23 @@
       <!-- Short Description Column -->
       <ng-container matColumnDef="shortDescription">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Show Description
+          Short Description
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-      </ng-container>
-
-      <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
       </ng-container>
 
       <!-- Actions Column -->
-      <ng-container matColumnDef="Actions">
-        <button mat-icon-button *matCellDef="let row" color="warn" (click)="deleteCategory(row.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="openDeleteConfirmation(row.id); $event.stopPropagation()"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
