--- a/src/app/components/ingredient/ingredient-table/ingredient.component.html
+++ b/src/app/components/ingredient/ingredient-table/ingredient.component.html
@@ -15,7 +15,6 @@
         #input
       />
     </mat-form-field>
-
     <button
       mat-raised-button
       color="primary"
@@ -42,44 +41,51 @@
       <!-- Short Description Column -->
       <ng-container matColumnDef="shortDescription">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Show Description
+          Short Description
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
       </ng-container>
 
-      <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      <!-- Picture Column -->
+      <ng-container matColumnDef="picture">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
+        <td mat-cell *matCellDef="let row">
+          <img [src]="row.pictureURL" />
+        </td>
       </ng-container>
 
-      <!-- Description Column -->
+      <!-- Category Column -->
       <ng-container matColumnDef="categoryId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
         <td mat-cell *matCellDef="let row">{{ row.categoryId }}</td>
       </ng-container>
 
-      <!-- Description Column -->
-      <ng-container matColumnDef="Actions">
-        <button
-          mat-icon-button
-          *matCellDef="let row"
-          color="warn"
-          (click)="deleteIngredient(row.id)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="openDeleteConfirmation(row.id); $event.stopPropagation()"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr
         mat-row
         *matRowDef="let row; columns: displayedColumns"
-        (click)="openOperationModal('edit', row)"
-      ></tr>
+        (click)="goToIngredientQuantities(row.id)"
+        (dblclick)="openOperationModal('edit', row)"
+      >
+        <!-- Row shown when there is no matching data. -->
+      </tr>
 
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">
+        <td class="mat-cell" colspan="5">
           No data matching the filter "{{ input.value }}"
         </td>
       </tr>
