bug fixes for CRUD in ingredient quantity + recipe

--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -31,7 +31,7 @@
       <ng-container matColumnDef="picture">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.pictureURL" />
+          <img [src]="row.picture" />
         </td>
       </ng-container>
 
