--- a/src/app/components/ingredient/ingredient-table/ingredient.component.html
+++ b/src/app/components/ingredient/ingredient-table/ingredient.component.html
@@ -32,10 +32,24 @@
         <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
 
+      <!-- Picture Column -->
+      <ng-container matColumnDef="picture">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
+        <td mat-cell *matCellDef="let row">
+          <img [src]="row.picture" />
+        </td>
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+        <td mat-cell *matCellDef="let row">{{ row.category.name }}</td>
       </ng-container>
 
       <!-- Short Description Column -->
@@ -44,20 +58,6 @@
           Short Description
         </th>
         <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
-      </ng-container>
-
-      <!-- Picture Column -->
-      <ng-container matColumnDef="picture">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
-        <td mat-cell *matCellDef="let row">
-          <img [src]="row.pictureURL" />
-        </td>
-      </ng-container>
-
-      <!-- Category Column -->
-      <ng-container matColumnDef="categoryId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-        <td mat-cell *matCellDef="let row">{{ row.categoryId }}</td>
       </ng-container>
 
       <!-- Actions Column -->
@@ -71,6 +71,12 @@
           >
             <mat-icon>delete</mat-icon>
           </button>
+          <button
+            mat-icon-button
+            (click)="openOperationModal('edit', row); $event.stopPropagation()"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
         </td>
       </ng-container>
 
@@ -79,7 +85,6 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         (click)="goToIngredientQuantities(row.id)"
-        (dblclick)="openOperationModal('edit', row)"
       >
         <!-- Row shown when there is no matching data. -->
       </tr>
