--- a/src/app/components/recipe/recipe-details/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipe/recipe-details/recipe-details/recipe-details.component.html
@@ -1,30 +1,35 @@
 <div class="container">
   <div class="recipe-details mat-elevation-z2">
-    <button mat-raised-button color="primary" (click)="goToRecipeUpdate(recipeDetails.recipe.id)">
+    <button mat-raised-button color="primary" (click)="goToRecipeUpdate()">
       Edit Recipe
     </button>
+    <button mat-raised-button color="warn" (click)="openDeleteConfirmation()">
+      Delete Recipe
+    </button>
     <div>Max amount: {{ recipeAmount }}</div>
-    <h1 class="recipe-details__title">{{ recipeDetails.recipe.name }}</h1>
+    <h1 class="recipe-details__title">{{ recipeDetails?.name }}</h1>
 
     <div class="recipe-details__section">
       <h2 class="recipe-details__subtitle">Description</h2>
-      <p class="recipe-details__description">
-        {{ recipeDetails.recipe.description }}
-      </p>
+      <div
+        class="recipe-details__description"
+        [innerHTML]="recipeDetails?.description"
+      ></div>
     </div>
 
     <div class="recipe-details__section">
       <h2 class="recipe-details__subtitle">Cooking Instructions</h2>
-      <p class="recipe-details__instructions">
-        {{ recipeDetails.recipe.cookingInstructions }}
-      </p>
+      <div
+        class="recipe-details__description"
+        [innerHTML]="recipeDetails?.cookingInstructions"
+      ></div>
     </div>
 
     <div class="recipe-details__section">
       <h2 class="recipe-details__subtitle">Categories</h2>
       <ul class="recipe-details__category-list">
         <li
-          *ngFor="let category of recipeDetails.categories"
+          *ngFor="let category of recipeDetails.recipeCategories"
           class="recipe-details__category"
         >
           {{ category.category.name }}
@@ -36,10 +41,10 @@
       <h2 class="recipe-details__subtitle">Ingredients</h2>
       <ul class="recipe-details__ingredient-list">
         <li
-          *ngFor="let ingredient of recipeDetails.ingredients"
+          *ngFor="let ingredient of recipeDetails.recipeIngredients"
           class="recipe-details__ingredient"
         >
-          {{ ingredient.quantity }} - {{ ingredient.ingredient.name }}
+          {{ ingredient.quantity }} {{ ingredient.unit }} - {{ ingredient.ingredient.name }}
         </li>
       </ul>
     </div>
