--- a/src/app/components/recipe/recipe-form/recipe-form/recipe-form.component.html
+++ b/src/app/components/recipe/recipe-form/recipe-form/recipe-form.component.html
@@ -7,10 +7,7 @@
           <input matInput formControlName="name" required />
         </mat-form-field>
 
-        <mat-form-field class="form-group">
-          <mat-label for="picture">Picture:</mat-label>
-          <input matFileInput formControlName="picture" id="picture" />
-        </mat-form-field>
+        <input type="file" (change)="onFileSelected($event)" />
 
         <mat-form-field appearance="fill">
           <mat-label>Short Description</mat-label>
@@ -110,6 +107,16 @@
                 type="number"
                 formControlName="selectedIngredientQuantity"
                 placeholder="Quantity"
+              />
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+              <mat-label>Unit</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="selectedIngredientUnit"
+                required
               />
             </mat-form-field>
 
