--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,40 +1,50 @@
 <div class="container">
-  <form (ngSubmit)="onSubmit()">
-    <div>
-      <label for="userName">Username</label>
-      <input
-        type="text"
-        id="userName"
-        [(ngModel)]="user.userName"
-        name="userName"
-        required
-      />
-    </div>
-
-    <div>
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        [(ngModel)]="user.email"
-        name="email"
-        required
-      />
-    </div>
-
-    <div>
-      <label for="password">Password</label>
-      <input
-        type="password"
-        id="password"
-        [(ngModel)]="user.password"
-        name="password"
-        required
-      />
-    </div>
-    <div>
-      <button type="submit">Register</button>
-    </div>
-    <div *ngIf="error" class="error">{{ error }}</div>
-  </form>
+  <div class="mat-card register-container">
+    <mat-card-title>Register</mat-card-title>
+    <mat-card-content>
+      <form (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+          <mat-label>Username</mat-label>
+          <input
+            matInput
+            type="text"
+            id="userName"
+            [(ngModel)]="user.userName"
+            name="userName"
+            required
+          />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            type="email"
+            id="email"
+            [(ngModel)]="user.email"
+            name="email"
+            required
+          />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            [type]="showPassword ? 'text' : 'password'"
+            id="password"
+            [(ngModel)]="user.password"
+            name="password"
+            required
+          />
+          <mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+            <mat-icon *ngIf="!showPassword">visibility_off</mat-icon>
+            <mat-icon *ngIf="showPassword">visibility</mat-icon>
+          </mat-icon-button>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">
+          Register
+        </button>
+        <div *ngIf="error" class="error">{{ error }}</div>
+      </form>
+    </mat-card-content>
+  </div>
 </div>
