--- a/src/app/components/modal/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/components/modal/change-password-dialog/change-password-dialog.component.html
@@ -1,14 +1,27 @@
 <h2 mat-dialog-title>Change Password</h2>
+<button mat-icon-button mat-dialog-close class="close-button">
+  <mat-icon aria-label="Close dialog">close</mat-icon>
+</button>
 <mat-dialog-content>
   <!-- Formular pentru schimbarea parolei -->
-  <mat-form-field>
-    <input matInput placeholder="Current Password" type="password" [(ngModel)]="currentPassword">
+  <mat-form-field appearance="fill">
+    <input
+      matInput
+      placeholder="Current Password"
+      type="password"
+      [(ngModel)]="currentPassword"
+    />
   </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="New Password" type="password" [(ngModel)]="newPassword">
+  <mat-form-field appearance="fill">
+    <input
+      matInput
+      placeholder="New Password"
+      type="password"
+      [(ngModel)]="newPassword"
+    />
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button (click)="updatePassword()">Save</button>
-  <button mat-button (click)="closeDialog()">Cancel</button>
+  <button mat-button color="warn" (click)="closeDialog()">Cancel</button>
+  <button mat-button color="primary" (click)="updatePassword()">Save</button>
 </mat-dialog-actions>
