--- a/src/app/components/category/category-modal/category-modal.component.scss
+++ b/src/app/components/category/category-modal/category-modal.component.scss
@@ -14,24 +14,32 @@
   margin-bottom: 20px;
 }
 
-.file-upload {
-  margin-bottom: 20px;
-}
-
-.selected-category-container {
-  margin-top: 10px;
-}
-
-.selected-category {
+.file-upload-container {
+  position: relative;
+  overflow: hidden;
   display: inline-block;
-  padding: 8px;
-  background-color: #e0e0e0;
-  border-radius: 4px;
-  margin-right: 8px;
 }
 
-.remove-category-button {
-  margin-left: 8px;
+.file-upload {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.file-upload-label {
+  background-color: #1976d2;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.checkbox {
+  margin-top: 10px;
 }
 
 .dialog-actions {
