--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -1,18 +1,14 @@
 <div class="container">
   <div class="filter-container">
-    <mat-form-field>
+    <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
-        #input
-      />
+      <input matInput (keyup)="applyFilter($event)" #input />
     </mat-form-field>
 
     <button
       mat-raised-button
       color="primary"
+      *ngIf="idIngredient !== 0"
       (click)="openOperationModal('add', null)"
     >
       Add Ingredient Quantity
@@ -33,27 +29,31 @@
         <td mat-cell *matCellDef="let row">{{ row.amount }}</td>
       </ng-container>
 
-      <!-- Short Description Column -->
+      <!-- Unit Column -->
       <ng-container matColumnDef="unit">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
         <td mat-cell *matCellDef="let row">{{ row.unit }}</td>
       </ng-container>
 
-      <!-- Description Column -->
+      <!-- Expiring Date Column -->
       <ng-container matColumnDef="expiringDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Expiring Date</th>
-        <td mat-cell *matCellDef="let row">{{ row.expiringDate }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row.expiringDate | date : "yyyy-MM-dd" }}
+        </td>
       </ng-container>
 
-      <!-- Description Column -->
+      <!-- Date Of Purchase Column -->
       <ng-container matColumnDef="dateOfPurchase">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Date Of Purchase
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.dateOfPurchase }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row.dateOfPurchase | date : "yyyy-MM-dd" }}
+        </td>
       </ng-container>
 
-      <!-- Description Column -->
+      <!-- Actions Column -->
       <ng-container matColumnDef="Actions">
         <button
           mat-icon-button
