--- a/src/app/components/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/components/modal/confirmation-modal/confirmation-modal.component.html
@@ -1,6 +1,9 @@
 <h2 mat-dialog-title>Confirmare Logout</h2>
-<mat-dialog-content> Ești sigur că vrei să te deloghezi? </mat-dialog-content>
+<button mat-icon-button mat-dialog-close class="close-button">
+  <mat-icon aria-label="Close dialog">close</mat-icon>
+</button>
+<mat-dialog-content>Ești sigur că vrei să te deloghezi?</mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button [mat-dialog-close]="false">Nu</button>
-  <button mat-button [mat-dialog-close]="true">Da</button>
+  <button mat-button color="warn" [mat-dialog-close]="false">Nu</button>
+  <button mat-button color="primary" [mat-dialog-close]="true">Da</button>
 </mat-dialog-actions>
