--- a/src/app/components/modal/delete-modal/delete-modal.component.html
+++ b/src/app/components/modal/delete-modal/delete-modal.component.html
@@ -1,8 +1,11 @@
 <h2 mat-dialog-title>Delete Confirmation</h2>
+<button mat-icon-button mat-dialog-close class="close-button">
+  <mat-icon aria-label="Close dialog">close</mat-icon>
+</button>
 <mat-dialog-content>
   <p>Are you sure you want to delete this item?</p>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
+<mat-dialog-actions align="end">
+  <button mat-button color="primary" (click)="onCancelClick()">No</button>
   <button mat-button color="warn" (click)="onConfirmClick()">Delete</button>
 </mat-dialog-actions>
