--- a/src/app/components/recipe/recipe-table/recipe.component.html
+++ b/src/app/components/recipe/recipe-table/recipe.component.html
@@ -1,18 +1,17 @@
 <div class="container">
-  <div>
-    <button class="recipe-button" (click)="goToCategoryManagement('recipe')">
+  <div class="add-category-button">
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="goToCategoryManagement('1')"
+    >
       Create more categories
     </button>
   </div>
   <div class="filter-container">
-    <mat-form-field>
+    <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
-        #input
-      />
+      <input matInput (keyup)="applyFilter($event)" #input />
     </mat-form-field>
 
     <button mat-raised-button color="primary" (click)="goToRecipeCreate()">
@@ -32,7 +31,7 @@
       <ng-container matColumnDef="picture">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.picture" />
+          <img [src]="row.picture" ngClass="recipe_picture" />
         </td>
       </ng-container>
 
@@ -57,14 +56,14 @@
           <ng-container
             *ngIf="row.recipeCategories && row.recipeCategories.length > 0"
           >
-            <p *ngFor="let category of row.recipeCategories">
+            <span *ngFor="let category of row.recipeCategories">
               {{ category.category.name }}
-            </p>
+            </span>
           </ng-container>
           <ng-container
             *ngIf="!row.recipeCategories || row.recipeCategories.length === 0"
           >
-            <p>No categories</p>
+            <span>No categories</span>
           </ng-container>
         </td>
       </ng-container>
