--- a/src/app/components/recipe/recipe-table/recipe.component.scss
+++ b/src/app/components/recipe/recipe-table/recipe.component.scss
@@ -1,19 +1,20 @@
-table {
-  width: 100%;
-  border-collapse: collapse; // To remove default spacing between table cells
+.recipe_picture {
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  object-fit: cover;
+}
+.filter-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.mat-elevation-z8 {
-  width: 100%;
+.filter-field {
+  width: 200px;
 }
 
-.mat-mdc-form-field {
-  font-size: 14px;
-  width: 30%;
+.add-category-button {
+  margin-bottom: 10px;
 }
 
-td,
-th {
-  width: 25%;
-  padding: 8px; // Adjust padding as needed
-}
