--- a/src/app/components/ingredient/ingredient-modal/ingredient-modal.component.html
+++ b/src/app/components/ingredient/ingredient-modal/ingredient-modal.component.html
@@ -14,7 +14,7 @@
 
     <mat-form-field class="form-field">
       <mat-label>Description</mat-label>
-      <textarea matInput formControlName="shortDescription" required></textarea>
+      <textarea matInput formControlName="description" required></textarea>
     </mat-form-field>
 
     <input type="file" class="file-upload" (change)="onFileSelected($event)" />
