--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="mat-card login-container">
-    <mat-card-title>Login</mat-card-title>
+    <mat-card-title class="login_title">Login</mat-card-title>
     <mat-card-content>
-      <form (ngSubmit)="login()">
-        <mat-form-field appearance="fill">
+      <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
+        <mat-form-field appearance="fill" class="login_input">
           <mat-label>Email</mat-label>
           <input
             matInput
@@ -14,7 +14,7 @@
             required
           />
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="login_input">
           <mat-label>Password</mat-label>
           <input
             matInput
