--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -2,11 +2,7 @@
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        #input
-      />
+      <input matInput (keyup)="applyFilter($event)" #input />
     </mat-form-field>
 
     <button
@@ -38,11 +34,9 @@
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="shortDescription">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Short Description
-        </th>
-        <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
