--- a/src/app/components/ingredient/ingredient-table/ingredient.component.html
+++ b/src/app/components/ingredient/ingredient-table/ingredient.component.html
@@ -59,11 +59,9 @@
       </ng-container>
 
       <!-- Short Description Column -->
-      <ng-container matColumnDef="shortDescription">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Short Description
-        </th>
-        <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
       </ng-container>
 
       <!-- Actions Column -->
