--- a/src/app/components/category/category-modal/category-modal.component.scss
+++ b/src/app/components/category/category-modal/category-modal.component.scss
@@ -50,7 +50,6 @@
   color: rgba(0, 0, 0, 0.54);
 }
 
-.save-button {
-  color: #fff;
-  background-color: #1976d2;
+.file-name {
+  margin-left: 1rem;
 }
