--- a/src/app/components/recipe/recipe-form/recipe-form.component.scss
+++ b/src/app/components/recipe/recipe-form/recipe-form.component.scss
@@ -19,6 +19,14 @@
   padding: 0 20px;
 }
 
+.file-name {
+  margin-left: 1rem;
+}
+
+.input_file_container {
+  margin: 0 0 1rem;
+}
+
 .recipe_selected_ingredients__container {
   padding: 20px 0;
   display: flex;
