--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -1,8 +1,16 @@
 <div class="category-page container">
+  <div class="back_button_container">
+    <button mat-button color="primary" (click)="goBack()">Back</button>
+  </div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" #input />
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Filter by name"
+        #input
+      />
     </mat-form-field>
 
     <button
@@ -15,71 +23,59 @@
     </button>
   </div>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="picture">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
-        <td mat-cell *matCellDef="let row">
-          <img [src]="row.picture" class="category-image" />
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row">
-          <button
-            mat-icon-button
-            color="warn"
-            class="delete-button"
-            (click)="openDeleteConfirmation(row.id); $event.stopPropagation()"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            color="primary"
-            class="edit-button"
-            (click)="openOperationModal('edit', row)"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        (click)="openOperationModal('edit', row)"
-        class="category-row"
-      ></tr>
-
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="5">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
-    </table>
-
-    <mat-paginator
-      class="paginator"
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
+  <div class="grid-container">
+    <ng-container *ngIf="displayedCategories.length > 0; else noCategories">
+      <div
+        class="card"
+        *ngFor="let category of displayedCategories"
+        (click)="goToElements(category)"
+      >
+        <img
+          [src]="
+            category.picture
+              ? category.picture
+              : './../../../../assets/images/category-default.png'
+          "
+          alt="category picture"
+          class="category-image"
+        />
+        <div class="category-details">
+          <h2>{{ category.name }}</h2>
+          <p>{{ category.description }}</p>
+          <div class="actions">
+            <button
+              mat-icon-button
+              color="warn"
+              class="delete-button"
+              (click)="
+                openDeleteConfirmation(category.id); $event.stopPropagation()
+              "
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+            <button
+              mat-icon-button
+              (click)="
+                openOperationModal('edit', category); $event.stopPropagation()
+              "
+            >
+              <mat-icon>edit</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+    <ng-template #noCategories>
+      <p>Nu există categorii disponibile momentan.</p>
+    </ng-template>
   </div>
+
+  <mat-paginator
+    class="paginator"
+    [length]="dataSource.data.length"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onPageChange($event)"
+    aria-label="Select page of users"
+  ></mat-paginator>
 </div>
