--- a/src/app/components/category/category-table/category.component.scss
+++ b/src/app/components/category/category-table/category.component.scss
@@ -2,25 +2,58 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
-}
 
-.filter-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  .category-row {
+    cursor: pointer;
+  }
 
-.filter-field {
-  width: 200px;
-}
+  .filter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
 
-.add-category-button {
-  margin-left: 20px;
-}
+    .filter-field {
+      width: 200px;
+      display: -webkit-box;
+    }
 
-.category-image {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
-  object-fit: cover;
+    .add-category-button {
+      margin-left: 20px;
+    }
+  }
+
+  .back_button_container {
+    padding: 10px 0;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
+    margin-bottom: 20px;
+
+    .card {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 20px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+
+      .category-image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        max-height: 200px;
+      }
+
+      &:hover {
+        transform: scale(1.05);
+      }
+
+      .category-details {
+        margin-top: 10px;
+      }
+    }
+  }
 }
