--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <div class="back_button_container">
+    <button mat-button color="primary" (click)="goBack()">Back</button>
+  </div>
+  <div class="title_container">Quantity {{ ingredintName }}</div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
@@ -8,14 +12,15 @@
     <button
       mat-raised-button
       color="primary"
-      *ngIf="idIngredient !== 0"
+      class="add-quantity-button"
+      *ngIf="ingredientId !== 0"
       (click)="openOperationModal('add', null)"
     >
-      Add Ingredient Quantity
+      Add Quantity
     </button>
   </div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8 quantities_container">
     <table mat-table [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -54,15 +59,18 @@
       </ng-container>
 
       <!-- Actions Column -->
-      <ng-container matColumnDef="Actions">
-        <button
-          mat-icon-button
-          *matCellDef="let row"
-          color="warn"
-          (click)="deleteIngredient(row.id)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="action_column"></th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-icon-button
+            color="warn"
+            class="delete-button"
+            (click)="openDeleteConfirmation(row.id); $event.stopPropagation()"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -70,6 +78,7 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         (click)="openOperationModal('edit', row)"
+        class="quantity-row"
       ></tr>
 
       <tr class="mat-row" *matNoDataRow>
