--- a/src/app/components/ingredient/ingredient-table/ingredient.component.html
+++ b/src/app/components/ingredient/ingredient-table/ingredient.component.html
@@ -1,21 +1,8 @@
 <div class="container">
-  <div class="quantities_category_buttons">
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="goToCategoryManagement('')"
-    >
-      Create more categories
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="goToIngredientQuantityManagement()"
-    >
-      Ingredient Quantity
-    </button>
+  <div class="back_button_container">
+    <button mat-button color="primary" (click)="goBack()">Back</button>
   </div>
-
+  <div class="title_container">Category {{ categoryName }}</div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
@@ -24,13 +11,14 @@
     <button
       mat-raised-button
       color="primary"
+      class="add-ingredient-button"
       (click)="openOperationModal('add', null)"
     >
       Add Ingredient
     </button>
   </div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8 ingredients_container">
     <table mat-table [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -42,7 +30,15 @@
       <ng-container matColumnDef="picture">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.picture" ngClass="ingredient_picture" />
+          <img
+            [src]="
+              row.picture
+                ? row.picture
+                : './../../../../assets/images/ingredient-default.png'
+            "
+            alt="ingredient picture"
+            ngClass="ingredient_picture"
+          />
         </td>
       </ng-container>
 
@@ -50,12 +46,6 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
-
-      <!-- Category Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-        <td mat-cell *matCellDef="let row">{{ row.category.name }}</td>
       </ng-container>
 
       <!-- Short Description Column -->
@@ -87,8 +77,9 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr
         mat-row
+        class="ingredient-row"
         *matRowDef="let row; columns: displayedColumns"
-        (click)="goToIngredientQuantities(row.id)"
+        (click)="goToIngredientQuantities(row)"
       >
         <!-- Row shown when there is no matching data. -->
       </tr>
