--- a/src/app/components/recipe/recipe-table/recipe.component.html
+++ b/src/app/components/recipe/recipe-table/recipe.component.html
@@ -1,25 +1,25 @@
 <div class="container">
-  <div class="add-category-button">
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="goToCategoryManagement('1')"
-    >
-      Create more categories
-    </button>
+  <div class="back_button_container">
+    <button mat-button color="primary" (click)="goBack()">Back</button>
   </div>
+  <div class="title_container">Category {{ categoryName }}</div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" #input />
     </mat-form-field>
 
-    <button mat-raised-button color="primary" (click)="goToRecipeCreate()">
+    <button
+      mat-raised-button
+      color="primary"
+      class="add-recipe-button"
+      (click)="goToRecipeCreate()"
+    >
       Add Recipe
     </button>
   </div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8 recipes_container">
     <table mat-table [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -31,10 +31,16 @@
       <ng-container matColumnDef="picture">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.picture" ngClass="recipe_picture" />
+          <img
+            [src]="
+              row.picture
+                ? row.picture
+                : './../../../../assets/images/recipe-default.png'
+            "
+            ngClass="recipe_picture"
+          />
         </td>
       </ng-container>
-
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -73,6 +79,7 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         (click)="goToRecipeDetails(row.id)"
+        class="recipe-row"
       >
         <!-- Row shown when there is no matching data. -->
       </tr>
