--- a/src/app/components/recipe/recipe-table/recipe.component.scss
+++ b/src/app/components/recipe/recipe-table/recipe.component.scss
@@ -4,17 +4,44 @@
   margin: 10px;
   object-fit: cover;
 }
+
+.title_container {
+  padding: 10px;
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.back_button_container {
+  padding: 10px 0;
+}
+
 .filter-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
+
+  .filter-field {
+    width: 200px;
+    display: -webkit-box;
+  }
+
+  .add-recipe-button {
+    margin-left: 20px;
+  }
 }
 
-.filter-field {
-  width: 200px;
-}
+.recipes_container {
+  width: 100%;
+  overflow-x: auto;
+  padding: 0 30px;
 
-.add-category-button {
-  margin-bottom: 10px;
-}
+  .recipe-row {
+    cursor: pointer;
+  }
 
+  .action_column {
+    width: 5%;
+  }
+}
